JS: ensure zip file is closed when reading collada file
Use the try-with-resources to make this more concise.

Signed-off-by: Harvey Harrison <harvey.harrison@gmail.com>